--- a/ABIMSIM/MainMenuView.xib
+++ b/ABIMSIM/MainMenuView.xib
@@ -163,7 +163,7 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wKN-yX-XFr" userLabel="ReplayContainerView">
-                    <rect key="frame" x="132" y="499" width="56" height="56"/>
+                    <rect key="frame" x="113" y="499" width="56" height="56"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AutoRecord_Camera" translatesAutoresizingMaskIntoConstraints="NO" id="oVB-C9-2Rh">
                             <rect key="frame" x="0.0" y="0.0" width="56" height="56"/>
@@ -226,7 +226,7 @@
                 <constraint firstItem="Yua-2N-2Jd" firstAttribute="centerX" secondItem="tyn-rH-lKS" secondAttribute="centerX" id="Zyt-k3-IbQ"/>
                 <constraint firstAttribute="centerX" secondItem="lUf-dq-MXE" secondAttribute="centerX" constant="-6.5" id="dG4-LN-yWA"/>
                 <constraint firstItem="lUf-dq-MXE" firstAttribute="top" secondItem="hQe-4c-cCB" secondAttribute="top" id="fEC-lG-GhE"/>
-                <constraint firstItem="wKN-yX-XFr" firstAttribute="centerX" secondItem="tyn-rH-lKS" secondAttribute="centerX" id="luV-do-JGE"/>
+                <constraint firstItem="wKN-yX-XFr" firstAttribute="centerX" secondItem="tyn-rH-lKS" secondAttribute="centerX" constant="-19" id="luV-do-JGE"/>
                 <constraint firstAttribute="bottom" secondItem="Bim-RU-DVf" secondAttribute="bottom" constant="10" id="nAs-Av-AGJ"/>
                 <constraint firstItem="Yua-2N-2Jd" firstAttribute="top" secondItem="tyn-rH-lKS" secondAttribute="top" constant="32" id="zIw-aB-HdS"/>
             </constraints>
