--- a/ABIMSIM/MainMenuView_iPad.xib
+++ b/ABIMSIM/MainMenuView_iPad.xib
@@ -198,7 +198,7 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pUN-fo-fxJ" userLabel="ReplayContainerView">
-                    <rect key="frame" x="356" y="955" width="56" height="56"/>
+                    <rect key="frame" x="337" y="955" width="56" height="56"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AutoRecord_Camera" translatesAutoresizingMaskIntoConstraints="NO" id="0YE-dD-y12">
                             <rect key="frame" x="0.0" y="0.0" width="56" height="56"/>
@@ -258,7 +258,7 @@
                 <constraint firstAttribute="trailing" secondItem="XDg-mZ-mEj" secondAttribute="trailing" constant="448" id="1aw-hu-UiU"/>
                 <constraint firstItem="XDg-mZ-mEj" firstAttribute="top" secondItem="btn-Dc-UEo" secondAttribute="top" id="8AO-FZ-X1e"/>
                 <constraint firstItem="Nt6-DV-dR5" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="8QE-X2-ING"/>
-                <constraint firstItem="pUN-fo-fxJ" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Hk8-nH-FqP"/>
+                <constraint firstItem="pUN-fo-fxJ" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" constant="-19" id="Hk8-nH-FqP"/>
                 <constraint firstItem="0nj-vN-AKl" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="78" id="QMW-Zk-dg4"/>
                 <constraint firstAttribute="bottom" secondItem="pUN-fo-fxJ" secondAttribute="bottom" constant="13" id="S2t-xb-Jri"/>
                 <constraint firstAttribute="bottom" secondItem="Nt6-DV-dR5" secondAttribute="bottom" constant="10" id="ZQH-LT-Afn"/>
